# Shell-wrapper

./: CMakeLists.txt  run
include/: ShellWrapper.hpp
src/: CMakeLists.txt  main.cpp
